[tool.poetry]
name = "pacman-pygame"
version = "0.1.0"
description = ""
authors = ["drmalcs <malsocl@protonmail.com>"]
readme = "README.md"
packages = [{include = "pacman_pygame"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
numpy = "^2.0.0"
scipy = "^1.9.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
