[tool.poetry]
name = "code_pikmon"
version = "0.1.0"
description = ""
authors = ["drmalcs <malsocl@protonmail.com>"]
readme = "README.md"
packages = [{include = "code_pikmon"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "*"
numpy = "*"
scipy = "*"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
